--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "concurrently \"npm run serve\" \"npm run server\"",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "server": "json-server -w server/db.json"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "concurrently": "^7.4.0",
     "core-js": "^3.6.5",
+    "json-server": "^0.17.0",
     "vue": "^3.0.0",
     "vuex": "^4.0.0-0"
   },
